automatically backed up by learn

--- a/views/info.erb
+++ b/views/info.erb
@@ -3,7 +3,7 @@
         <title>Info page!</title>
     </head>
     <body>
-        <h1>Information!</h1>
+        <h1>Info page</h1>
         <p>This is the info page: My name is Fiona, and my favorite bird is a ruby crowned kinglet.</p>
     </body>
 </html>
